# speech-vector-search

./: .gitignore  README.md  pyproject.toml  setup.cfg
.githooks/: pre-commit
archive/: store_ingest.py
docs/: PLAN_token_embeddings_prototypes.md  architecture-plan.md  prototype-lexicon-example.py
examples/: demo_subset_means.py
speech_vector_search/: __init__.py  cli.py  echoframe_adapter.py  evaluate.py  io.py  locations.py  metadata.py  normalize.py  phraser_adapter.py  pooling.py  prototype_artifact.py  prototype_metadata.py  prototypes.py  sampling.py  search.py  store_ingest.py  utils.py
tests/: test_echoframe_adapter.py  test_evaluate.py  test_io.py  test_phraser_adapter.py  test_pooling.py  test_prototype_artifact.py  test_prototypes.py  test_sampling.py  test_search.py  test_store_ingest.py
